Fix : Sidenav and logo fixed

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <span class="tag">Java</span>
                             <span class="tag">React</span>
                         </div>
-                        <button class="project-button">View Project</button>
+                        <button class="project-button" onclick="window.open('https://kiruthick-07.github.io/Agam_Creations_Portfolio/','_blank')">View Project</button>
                     </div>
                 </div>
                 
