Fix : project image fix

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/265087/pexels-photo-265087.jpeg?auto=compress&cs=tinysrgb&w=600" alt="FinTech Dashboard">
+                        <img src="coe.png" alt="Landing Page Preview">
                     </div>
                     <div class="project-content">
                         <h3>Landing page Development</h3>
@@ -232,7 +232,7 @@
                             <span class="tag">Java</span>
                             <span class="tag">React</span>
                         </div>
-                        <button class="project-button" onclick="window.open('https://kiruthick-07.github.io/Agam_Creations_Portfolio/','_blank')">View Project</button>
+                        <button class="project-button" onclick="window.open('https://mts-coe.vercel.app/','_blank')">View Project</button>
                     </div>
                 </div>
                 
