Fix : project image fix

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/digitalface.jpg" alt="Deepfake Detection Visualization">
+                        <img src="dfd.png" alt="Deepfake Detection Visualization">
                     </div>
                     <div class="project-content">
                         <h3>AI-Powered Deepfake Detection</h3>
