Fix : project image fix

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Landing page Development</h3>
-                        <p>An intuitive financial analytics dashboard with real-time data visualization, risk assessment tools, and automated reporting capabilities.</p>
+                        <p>Designed & Developed an landing page which showcases the centre of excelence of the college.</p>
                         <div class="project-tags">
                             <span class="tag">HTML</span>
                             <span class="tag">CSS</span>
