--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="navbar" class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2><span class="logo-font">A</span> Azenix</h2>
+                <h2><span class="logo-font"></span> Azenix</h2>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
