--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
     <section id="services" class="services">
         <div class="container">
             <div class="section-header">
+                <center>
                 <h2>Our Services</h2>
                 <p >Comprehensive software solutions tailored to your business needs</p>
+                </center>
             </div>
             <div class="services-grid">
                 <div class="service-card">
@@ -197,8 +199,10 @@
     <section id="projects" class="projects">
         <div class="container">
             <div class="section-header">
+                <center>
                 <h2>Our Projects</h2>
                 <p>A showcase of our recent work and success stories</p>
+                </center>
             </div>
             <div class="projects-grid">
                 <div class="project-card">
@@ -257,8 +261,10 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
+                <center>
                 <h2>About Us</h2>
                 <p>Discover what makes Azenix your ideal technology partner</p>
+                </center>
             </div>
             <div class="about-content">
                 <div class="about-text">
@@ -309,7 +315,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-header">
-                <h2>Get In Touch</h2>
+                <h2 style="text-align: center;">Get In Touch</h2>
             </div>
             <br>
             <div class="contact-content">
